# Test_backend_task

./: README.md  main.py  pyproject.toml
src/api/: router.py
src/api/endpoints/: users.py
src/api/models/: user.py
src/app/: app.py  lifespan.py  middleware.py
src/config/: database.py  logger.py  rabbitmq.py  redis.py
src/database/: database.py
src/database/models/: user.py
src/rabbitmq/: consumer.py  producer.py
